Refactor AddVariableDialog.java + configuration files

--- a/src/main/resources/gui/common.properties
+++ b/src/main/resources/gui/common.properties
@@ -22,5 +22,5 @@
 # SOFTWARE.
 ###############################################################################
 
-mainPanel.tab.fileFiltersPanel.label=File Filters
-mainPanel.tab.renamingPanel.label=Rename
+common.label.ok=OK
+common.label.cancel=Cancel
