--- a/src/main/resources/gui/addVarDialog.properties
+++ b/src/main/resources/gui/addVarDialog.properties
@@ -22,5 +22,8 @@
 # SOFTWARE.
 ###############################################################################
 
-mainPanel.tab.fileFiltersPanel.label=File Filters
-mainPanel.tab.renamingPanel.label=Rename
+addVarDialog.panel.title=Add Variable
+
+addVarDialog.label.type=Type:
+addVarDialog.label.nbDigits=Nb Digits:
+addVarDialog.label.initialValue=Initial Value:
