--- a/src/main/resources/gui/mainPanel.properties
+++ b/src/main/resources/gui/mainPanel.properties
@@ -22,5 +22,6 @@
 # SOFTWARE.
 #
 
+mainPanel.frame.title=File Renamer
 mainPanel.tab.fileFiltersPanel.label=File Filters
 mainPanel.tab.renamingPanel.label=Rename
