Change toolbox from dependency to repository

--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,7 @@
         <log4j.version>2.13.2</log4j.version>
         <jdom.version>2.0.6</jdom.version>
         <miglayout.version>3.7.4</miglayout.version>
-        <toolbox.version>1.1</toolbox.version>
-        <commons-configuration2.version>2.7</commons-configuration2.version>
+        <commons-configuration.version>1.10</commons-configuration.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -60,6 +59,16 @@
         <mvn.deploy.version>2.8.2</mvn.deploy.version>
         <mvn.site.version>3.9.0</mvn.site.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>GitHub Julien Le Sauce Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/jlesauce/Toolbox</url>
+            <releases><enabled>true</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+    </repositories>
 
     <!-- Project Libraries -->
     <dependencies>
@@ -96,18 +105,11 @@
             <version>${miglayout.version}</version>
         </dependency>
 
-        <!-- Toolbox -->
-        <dependency>
-            <groupId>org.jls</groupId>
-            <artifactId>toolbox</artifactId>
-            <version>${toolbox.version}</version>
-        </dependency>
-
         <!-- Apache Commons Configuration -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-configuration2</artifactId>
-            <version>${commons-configuration2.version}</version>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>${commons-configuration.version}</version>
         </dependency>
 
         <!-- Apache Commons Collections -->
@@ -197,18 +199,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-
-            <!-- Required maven plugins -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${mvn.deploy.version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${mvn.site.version}</version>
             </plugin>
         </plugins>
     </build>
