--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,8 @@
         <log4j.version>2.13.2</log4j.version>
         <jdom.version>2.0.6</jdom.version>
         <miglayout.version>3.7.4</miglayout.version>
-        <commons-configuration.version>1.10</commons-configuration.version>
+        <toolbox.version>1.1</toolbox.version>
+        <commons-configuration2.version>2.7</commons-configuration2.version>
         <commons-collections.version>3.2.2</commons-collections.version>
         <commons-io.version>2.6</commons-io.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
@@ -105,11 +106,18 @@
             <version>${miglayout.version}</version>
         </dependency>
 
+        <!-- Toolbox -->
+        <dependency>
+            <groupId>org.jls</groupId>
+            <artifactId>toolbox</artifactId>
+            <version>${toolbox.version}</version>
+        </dependency>
+
         <!-- Apache Commons Configuration -->
         <dependency>
-            <groupId>commons-configuration</groupId>
-            <artifactId>commons-configuration</artifactId>
-            <version>${commons-configuration.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>${commons-configuration2.version}</version>
         </dependency>
 
         <!-- Apache Commons Collections -->
@@ -199,6 +207,18 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- Required maven plugins -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${mvn.deploy.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${mvn.site.version}</version>
             </plugin>
         </plugins>
     </build>
